<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sebdeveloper6952.teammaker.MainMenu"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="67dp"
        android:id="@+id/eT_Weight"
        android:layout_below="@+id/textView1"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView1"
        android:layout_alignStart="@+id/eT_Weight"
        android:layout_marginTop="11dp"
        android:id="@+id/eT_Name" />

    <TextView
        android:text="@string/mainMenu_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/eT_Name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:id="@+id/textView" />

    <TextView
        android:text="@string/mainMenu_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/eT_Weight"
        android:layout_alignStart="@+id/textView"
        android:id="@+id/textView2" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_AddMember"
        android:id="@+id/lV_Members" />

    <Button
        android:text="@string/mainMenu_btnAddMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_AddMember"
        android:layout_below="@+id/eT_Weight"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lV_Members"
        android:layout_alignParentEnd="true"
        android:id="@+id/btn_SaveList" />

    <Button
        android:text="@string/mainMenu_btnMakeTeams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_MakeTeams"
        android:layout_below="@+id/eT_Weight"
        android:layout_alignStart="@+id/textView1" />


</RelativeLayout>
